--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -35,7 +35,7 @@ jobs:
           "sphinx-design>=0.5"
 
       - name: Build documentation
-        run: python -m sphinx -C -b html -D 'extensions=sphinx_design,sphinx_copybutton,myst_parser' -D 'html_theme=alabaster' -D "project=Browgent" -D "html_title=Browgent Documentation" docs docs/_build/html
+        run: python -m sphinx -C -b html -D 'extensions=sphinx_design,sphinx_copybutton,myst_parser' -D 'html_theme=alabaster' -D "project=AgentFlow" -D "html_title=AgentFlow Documentation" docs docs/_build/html
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
