--- a/portal/package.json
+++ b/portal/package.json
@@ -25,5 +25,8 @@
     "dev:api": "tsx watch server/index.js",
     "dev:ui": "vite build --watch --mode development --config ui/vite.config.js"
   },
+  "imports": {
+    "#domain/*": "../domain/*"
+  },
   "packageManager": "pnpm@10.20.0"
 }
